k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  ports:
    - name: "web"
      port: 80
      targetPort: web # line 53
  selector:
    app: gitops-k8s
status:
  loadBalancer: {}
